refactor: update documentation and improve NoCode authorization handling